--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,29 @@
 
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:sb201db}
+#changing the server port
+
+server.port=8088
+
+#db specific properties
+
+spring.datasource.url=jdbc:mysql://localhost:3306/sb201db
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:4935}
+
+spring.datasource.username=root
+
+spring.datasource.password=4935
+
+
+
+
 
 #ORM s/w specific properties
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-#ORM s/w specific properties
-spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
 
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHERR
