--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,17 +13,12 @@ spring.datasource.username=root
 
 spring.datasource.password=4935
 
-
-
-
-
 #ORM s/w specific properties
 
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 
+# swagger-ui custom path
 
 
-
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHERR
